@@ -29,6 +29,7 @@ version <next>:
 - vibrato filter
 - innoHeim/Rsupport Screen Capture Codec decoder
 - ADPCM AICA decoder
+- Interplay ACM demuxer and audio decoder
 
 
 version 2.8:
